--- a/notebooks/01_data_engineering.ipynb
+++ b/notebooks/01_data_engineering.ipynb
@@ -24,14 +24,24 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 10,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "API Key cargada: b1ab9...\n",
+      "Setup completo\n"
+     ]
+    }
+   ],
    "source": [
     "# Librerías\n",
     "import pandas as pd\n",
     "import numpy as np\n",
     "import requests\n",
+    "import openpyxl\n",
     "import os\n",
     "from dotenv import load_dotenv\n",
     "\n",
@@ -65,9 +75,21 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 2,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Verificando series...\n",
+      "\n",
+      "✓ CPIAUCSL: 949 registros\n",
+      "✓ FEDFUNDS: 859 registros\n",
+      "✓ DCOILWTICO: 10469 registros\n"
+     ]
+    }
+   ],
    "source": [
     "# Definir series de FRED\n",
     "series_fred = {\n",
@@ -97,9 +119,23 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 3,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Descargando datos...\n",
+      "\n",
+      "✓ cpi_raw.csv - 949 filas\n",
+      "✓ fed_rate_raw.csv - 859 filas\n",
+      "✓ oil_price_raw.csv - 10469 filas\n",
+      "\n",
+      "Datos de FRED guardados\n"
+     ]
+    }
+   ],
    "source": [
     "# Descargar y guardar datos crudos\n",
     "print(\"Descargando datos...\\n\")\n",
@@ -131,12 +167,21 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 12,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "✓ gold_price_raw.csv - 792 filas\n",
+      "  Rango: 1960-01 a 2025-12\n"
+     ]
+    }
+   ],
    "source": [
     "# Cargar oro del World Bank\n",
-    "# NOTA: Debes copiar CMO-Historical-Data-Monthly.xlsx a data/raw/\n",
+    "# NOTA: Copiar CMO-Historical-Data-Monthly.xlsx a data/raw/\n",
     "\n",
     "df_gold_wb = pd.read_excel('data/raw/CMO-Historical-Data-Monthly.xlsx', \n",
     "                           sheet_name='Monthly Prices', \n",
@@ -168,9 +213,34 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 13,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "PERFIL DE DATOS CRUDOS\n",
+      "============================================================\n",
+      "\n",
+      "CPI\n",
+      "  Filas: 949\n",
+      "  Columnas: ['realtime_start', 'realtime_end', 'date', 'value']\n",
+      "\n",
+      "FED_RATE\n",
+      "  Filas: 859\n",
+      "  Columnas: ['realtime_start', 'realtime_end', 'date', 'value']\n",
+      "\n",
+      "OIL_PRICE\n",
+      "  Filas: 10469\n",
+      "  Columnas: ['realtime_start', 'realtime_end', 'date', 'value']\n",
+      "\n",
+      "GOLD_PRICE\n",
+      "  Filas: 792\n",
+      "  Columnas: ['date', 'value']\n"
+     ]
+    }
+   ],
    "source": [
     "# Cargar todos los datasets\n",
     "datasets = {\n",
@@ -199,9 +269,37 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 14,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "IDENTIFICACIÓN DE PROBLEMAS\n",
+      "============================================================\n",
+      "\n",
+      "CPI\n",
+      "  Fechas: 1947-01-01 a 2026-01-01\n",
+      "  Valores no numéricos: ['.']\n",
+      "  Cantidad: 1\n",
+      "\n",
+      "FED_RATE\n",
+      "  Fechas: 1954-07-01 a 2026-01-01\n",
+      "  Valores no numéricos: Ninguno\n",
+      "  Cantidad: 0\n",
+      "\n",
+      "OIL_PRICE\n",
+      "  Fechas: 1986-01-02 a 2026-02-17\n",
+      "  Valores no numéricos: ['.']\n",
+      "  Cantidad: 369\n",
+      "\n",
+      "GOLD_PRICE\n",
+      "  Fechas: 1960-01-01 a 2025-12-01\n",
+      "  Nulos: 0\n"
+     ]
+    }
+   ],
    "source": [
     "# Buscar valores problemáticos en series de FRED\n",
     "print(\"IDENTIFICACIÓN DE PROBLEMAS\")\n",
@@ -237,7 +335,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 15,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -270,9 +368,21 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 17,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Series limpias:\n",
+      "  CPI: 949 filas, 1 nulos\n",
+      "  FED: 859 filas, 0 nulos\n",
+      "  OIL: 10469 filas, 369 nulos\n",
+      "  GOLD: 792 filas, 0 nulos\n"
+     ]
+    }
+   ],
    "source": [
     "# Limpiar cada serie\n",
     "df_cpi = limpiar_serie_fred('data/raw/cpi_raw.csv', 'cpi')\n",
@@ -280,7 +390,7 @@
     "df_oil = limpiar_serie_fred('data/raw/oil_price_raw.csv', 'oil_price')\n",
     "df_gold = limpiar_serie_gold('data/raw/gold_price_raw.csv')\n",
     "\n",
-    "print(\"Series limpiadas:\")\n",
+    "print(\"Series limpias:\")\n",
     "print(f\"  CPI: {len(df_cpi)} filas, {df_cpi['cpi'].isna().sum()} nulos\")\n",
     "print(f\"  FED: {len(df_fed)} filas, {df_fed['fed_rate'].isna().sum()} nulos\")\n",
     "print(f\"  OIL: {len(df_oil)} filas, {df_oil['oil_price'].isna().sum()} nulos\")\n",
@@ -296,9 +406,21 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 18,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Frecuencias actuales:\n",
+      "  CPI: Mensual (1947-2026)\n",
+      "  FED: Mensual (1954-2026)\n",
+      "  OIL: Diaria (1986-2026)\n",
+      "  GOLD: Mensual (1960-2025)\n"
+     ]
+    }
+   ],
    "source": [
     "# Ver frecuencias actuales\n",
     "print(\"Frecuencias actuales:\")\n",
@@ -310,9 +432,17 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 19,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "OIL convertido: 10469 diarios → 482 mensuales\n"
+     ]
+    }
+   ],
    "source": [
     "# Convertir OIL de diario a mensual (promedio)\n",
     "df_oil_mensual = df_oil.set_index('date').resample('MS').mean().reset_index()\n",
@@ -329,9 +459,26 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 20,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Dataset unido: 950 filas\n",
+      "Rango: 1947-01-01 00:00:00 a 2026-02-01 00:00:00\n",
+      "\n",
+      "Nulos por columna:\n",
+      "date            0\n",
+      "cpi             2\n",
+      "fed_rate       91\n",
+      "oil_price     468\n",
+      "gold_price    158\n",
+      "dtype: int64\n"
+     ]
+    }
+   ],
    "source": [
     "# Unir todas las series\n",
     "df_final = df_cpi.copy()\n",
@@ -350,9 +497,19 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 25,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Dataset final: 479 filas con datos completos\n",
+      "Desde: 1986-01-01 00:00:00\n",
+      "Hasta: 2025-12-01 00:00:00\n"
+     ]
+    }
+   ],
    "source": [
     "# Filtrar datos completos\n",
     "df_modelo = df_final.dropna().reset_index(drop=True)\n",
@@ -371,9 +528,22 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 26,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "✓ Guardado: data/processed/dataset_modelo.csv\n",
+      "\n",
+      "Resumen:\n",
+      "  Filas: 479\n",
+      "  Columnas: ['date', 'cpi', 'fed_rate', 'oil_price', 'gold_price']\n",
+      "  Período: 1986-01 a 2025-12\n"
+     ]
+    }
+   ],
    "source": [
     "# Guardar\n",
     "df_modelo.to_csv('data/processed/dataset_modelo.csv', index=False)\n",
@@ -387,9 +557,96 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 27,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "data": {
+      "text/html": [
+       "<div>\n",
+       "<style scoped>\n",
+       "    .dataframe tbody tr th:only-of-type {\n",
+       "        vertical-align: middle;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe tbody tr th {\n",
+       "        vertical-align: top;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe thead th {\n",
+       "        text-align: right;\n",
+       "    }\n",
+       "</style>\n",
+       "<table border=\"1\" class=\"dataframe\">\n",
+       "  <thead>\n",
+       "    <tr style=\"text-align: right;\">\n",
+       "      <th></th>\n",
+       "      <th>date</th>\n",
+       "      <th>cpi</th>\n",
+       "      <th>fed_rate</th>\n",
+       "      <th>oil_price</th>\n",
+       "      <th>gold_price</th>\n",
+       "    </tr>\n",
+       "  </thead>\n",
+       "  <tbody>\n",
+       "    <tr>\n",
+       "      <th>0</th>\n",
+       "      <td>1986-01-01</td>\n",
+       "      <td>109.9</td>\n",
+       "      <td>8.14</td>\n",
+       "      <td>22.925455</td>\n",
+       "      <td>347.48</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>1</th>\n",
+       "      <td>1986-02-01</td>\n",
+       "      <td>109.7</td>\n",
+       "      <td>7.86</td>\n",
+       "      <td>15.454737</td>\n",
+       "      <td>338.89</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>2</th>\n",
+       "      <td>1986-03-01</td>\n",
+       "      <td>109.1</td>\n",
+       "      <td>7.48</td>\n",
+       "      <td>12.612500</td>\n",
+       "      <td>345.70</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>3</th>\n",
+       "      <td>1986-04-01</td>\n",
+       "      <td>108.7</td>\n",
+       "      <td>6.99</td>\n",
+       "      <td>12.843636</td>\n",
+       "      <td>340.44</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>4</th>\n",
+       "      <td>1986-05-01</td>\n",
+       "      <td>109.0</td>\n",
+       "      <td>6.85</td>\n",
+       "      <td>15.377619</td>\n",
+       "      <td>342.40</td>\n",
+       "    </tr>\n",
+       "  </tbody>\n",
+       "</table>\n",
+       "</div>"
+      ],
+      "text/plain": [
+       "        date    cpi  fed_rate  oil_price  gold_price\n",
+       "0 1986-01-01  109.9      8.14  22.925455      347.48\n",
+       "1 1986-02-01  109.7      7.86  15.454737      338.89\n",
+       "2 1986-03-01  109.1      7.48  12.612500      345.70\n",
+       "3 1986-04-01  108.7      6.99  12.843636      340.44\n",
+       "4 1986-05-01  109.0      6.85  15.377619      342.40"
+      ]
+     },
+     "execution_count": 27,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
    "source": [
     "# Vista previa\n",
     "df_modelo.head()"
@@ -397,9 +654,96 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 28,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "data": {
+      "text/html": [
+       "<div>\n",
+       "<style scoped>\n",
+       "    .dataframe tbody tr th:only-of-type {\n",
+       "        vertical-align: middle;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe tbody tr th {\n",
+       "        vertical-align: top;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe thead th {\n",
+       "        text-align: right;\n",
+       "    }\n",
+       "</style>\n",
+       "<table border=\"1\" class=\"dataframe\">\n",
+       "  <thead>\n",
+       "    <tr style=\"text-align: right;\">\n",
+       "      <th></th>\n",
+       "      <th>date</th>\n",
+       "      <th>cpi</th>\n",
+       "      <th>fed_rate</th>\n",
+       "      <th>oil_price</th>\n",
+       "      <th>gold_price</th>\n",
+       "    </tr>\n",
+       "  </thead>\n",
+       "  <tbody>\n",
+       "    <tr>\n",
+       "      <th>474</th>\n",
+       "      <td>2025-07-01</td>\n",
+       "      <td>322.169</td>\n",
+       "      <td>4.33</td>\n",
+       "      <td>68.390909</td>\n",
+       "      <td>3340.15</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>475</th>\n",
+       "      <td>2025-08-01</td>\n",
+       "      <td>323.291</td>\n",
+       "      <td>4.33</td>\n",
+       "      <td>64.864286</td>\n",
+       "      <td>3368.03</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>476</th>\n",
+       "      <td>2025-09-01</td>\n",
+       "      <td>324.245</td>\n",
+       "      <td>4.22</td>\n",
+       "      <td>63.959048</td>\n",
+       "      <td>3667.68</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>477</th>\n",
+       "      <td>2025-11-01</td>\n",
+       "      <td>325.063</td>\n",
+       "      <td>3.88</td>\n",
+       "      <td>60.062222</td>\n",
+       "      <td>4087.19</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>478</th>\n",
+       "      <td>2025-12-01</td>\n",
+       "      <td>326.031</td>\n",
+       "      <td>3.72</td>\n",
+       "      <td>57.972273</td>\n",
+       "      <td>4309.23</td>\n",
+       "    </tr>\n",
+       "  </tbody>\n",
+       "</table>\n",
+       "</div>"
+      ],
+      "text/plain": [
+       "          date      cpi  fed_rate  oil_price  gold_price\n",
+       "474 2025-07-01  322.169      4.33  68.390909     3340.15\n",
+       "475 2025-08-01  323.291      4.33  64.864286     3368.03\n",
+       "476 2025-09-01  324.245      4.22  63.959048     3667.68\n",
+       "477 2025-11-01  325.063      3.88  60.062222     4087.19\n",
+       "478 2025-12-01  326.031      3.72  57.972273     4309.23"
+      ]
+     },
+     "execution_count": 28,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
    "source": [
     "df_modelo.tail()"
    ]
@@ -412,7 +756,15 @@
    "name": "python3"
   },
   "language_info": {
+   "codemirror_mode": {
+    "name": "ipython",
+    "version": 3
+   },
+   "file_extension": ".py",
+   "mimetype": "text/x-python",
    "name": "python",
+   "nbconvert_exporter": "python",
+   "pygments_lexer": "ipython3",
    "version": "3.10.14"
   }
  },
