Fase 3: Modelo de predicción de inflación completo

--- a/notebooks/03_modelo.ipynb
+++ b/notebooks/03_modelo.ipynb
@@ -22,7 +22,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 1,
+   "execution_count": null,
    "metadata": {},
    "outputs": [
     {
@@ -40,6 +40,8 @@
     "import matplotlib.pyplot as plt\n",
     "import seaborn as sns\n",
     "import os\n",
+    "import mlflow\n",
+    "import mlflow.sklearn\n",
     "\n",
     "# Modelos\n",
     "from sklearn.linear_model import LinearRegression, Ridge, Lasso\n",
@@ -915,7 +917,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 21,
+   "execution_count": null,
    "metadata": {},
    "outputs": [
     {
@@ -944,7 +946,7 @@
     "    ax.grid(True, alpha=0.3)\n",
     "\n",
     "plt.tight_layout()\n",
-    "plt.savefig('data/processed/modelo_comparacion.png', dpi=150, bbox_inches='tight')\n",
+    "plt.savefig('figures/processed/modelo_comparacion.png', dpi=150, bbox_inches='tight')\n",
     "plt.show()"
    ]
   },
@@ -957,7 +959,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 22,
+   "execution_count": null,
    "metadata": {},
    "outputs": [
     {
@@ -986,13 +988,13 @@
     "ax.grid(True, alpha=0.3)\n",
     "\n",
     "plt.tight_layout()\n",
-    "plt.savefig('data/processed/modelo_prediccion.png', dpi=150, bbox_inches='tight')\n",
+    "plt.savefig('figures/processed/modelo_prediccion.png', dpi=150, bbox_inches='tight')\n",
     "plt.show()"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 23,
+   "execution_count": null,
    "metadata": {},
    "outputs": [
     {
@@ -1024,7 +1026,7 @@
     "ax.grid(True, alpha=0.3)\n",
     "\n",
     "plt.tight_layout()\n",
-    "plt.savefig('data/processed/modelo_scatter.png', dpi=150, bbox_inches='tight')\n",
+    "plt.savefig('figures/processed/modelo_scatter.png', dpi=150, bbox_inches='tight')\n",
     "plt.show()"
    ]
   },
@@ -1067,7 +1069,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 25,
+   "execution_count": null,
    "metadata": {},
    "outputs": [
     {
@@ -1101,7 +1103,7 @@
     "axes[1].set_title('Errores en el Tiempo', fontweight='bold')\n",
     "\n",
     "plt.tight_layout()\n",
-    "plt.savefig('data/processed/modelo_errores.png', dpi=150, bbox_inches='tight')\n",
+    "plt.savefig('figures/processed/modelo_errores.png', dpi=150, bbox_inches='tight')\n",
     "plt.show()"
    ]
   },
@@ -1114,7 +1116,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 26,
+   "execution_count": null,
    "metadata": {},
    "outputs": [
     {
@@ -1174,7 +1176,7 @@
     "ax.invert_yaxis()\n",
     "\n",
     "plt.tight_layout()\n",
-    "plt.savefig('data/processed/modelo_importancia.png', dpi=150, bbox_inches='tight')\n",
+    "plt.savefig('figures/processed/modelo_importancia.png', dpi=150, bbox_inches='tight')\n",
     "plt.show()\n",
     "\n",
     "print(\"\\nTop 10 Features:\")\n",
