--- a/notebooks/03_modelo.ipynb
+++ b/notebooks/03_modelo.ipynb
@@ -40,8 +40,6 @@
     "import matplotlib.pyplot as plt\n",
     "import seaborn as sns\n",
     "import os\n",
-    "import mlflow\n",
-    "import mlflow.sklearn\n",
     "\n",
     "# Modelos\n",
     "from sklearn.linear_model import LinearRegression, Ridge, Lasso\n",
@@ -917,7 +915,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 21,
    "metadata": {},
    "outputs": [
     {
@@ -946,7 +944,7 @@
     "    ax.grid(True, alpha=0.3)\n",
     "\n",
     "plt.tight_layout()\n",
-    "plt.savefig('figures/processed/modelo_comparacion.png', dpi=150, bbox_inches='tight')\n",
+    "plt.savefig('figures/modelo_comparacion.png', dpi=150, bbox_inches='tight')\n",
     "plt.show()"
    ]
   },
@@ -959,7 +957,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 22,
    "metadata": {},
    "outputs": [
     {
@@ -988,13 +986,13 @@
     "ax.grid(True, alpha=0.3)\n",
     "\n",
     "plt.tight_layout()\n",
-    "plt.savefig('figures/processed/modelo_prediccion.png', dpi=150, bbox_inches='tight')\n",
+    "plt.savefig('figures/modelo_prediccion.png', dpi=150, bbox_inches='tight')\n",
     "plt.show()"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 23,
    "metadata": {},
    "outputs": [
     {
@@ -1026,7 +1024,7 @@
     "ax.grid(True, alpha=0.3)\n",
     "\n",
     "plt.tight_layout()\n",
-    "plt.savefig('figures/processed/modelo_scatter.png', dpi=150, bbox_inches='tight')\n",
+    "plt.savefig('figures/modelo_scatter.png', dpi=150, bbox_inches='tight')\n",
     "plt.show()"
    ]
   },
@@ -1069,7 +1067,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 25,
    "metadata": {},
    "outputs": [
     {
@@ -1103,7 +1101,7 @@
     "axes[1].set_title('Errores en el Tiempo', fontweight='bold')\n",
     "\n",
     "plt.tight_layout()\n",
-    "plt.savefig('figures/processed/modelo_errores.png', dpi=150, bbox_inches='tight')\n",
+    "plt.savefig('figures/modelo_errores.png', dpi=150, bbox_inches='tight')\n",
     "plt.show()"
    ]
   },
@@ -1116,7 +1114,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 26,
    "metadata": {},
    "outputs": [
     {
@@ -1176,7 +1174,7 @@
     "ax.invert_yaxis()\n",
     "\n",
     "plt.tight_layout()\n",
-    "plt.savefig('figures/processed/modelo_importancia.png', dpi=150, bbox_inches='tight')\n",
+    "plt.savefig('figures/modelo_importancia.png', dpi=150, bbox_inches='tight')\n",
     "plt.show()\n",
     "\n",
     "print(\"\\nTop 10 Features:\")\n",
